# DemucsTRT

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: FindTensorRT.cmake  LoadEnv.cmake
src/: AudioStream.cpp  AudioStream.hpp  core.cpp  core.hpp  demucs.cpp
